{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 62,
  "lineage": "cf6b3e9a-4566-8fdc-9f40-02c12ce3af20",
  "resources": [
    {
      "mode": "data",
      "type": "aws_alb",
      "name": "alb_nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:640168420071:loadbalancer/app/dev-alb/692df754e0b1e442",
            "arn_suffix": "app/dev-alb/692df754e0b1e442",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-alb-1454280577.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:640168420071:loadbalancer/app/dev-alb/692df754e0b1e442",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04ad8889b8e4863f9",
              "sg-04da3fbacb6b56802"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0098f50fc1aadb56e"
              },
              {
                "subnet_id": "subnet-0d2cf41ffa49ec54f"
              }
            ],
            "subnets": [
              "subnet-0098f50fc1aadb56e",
              "subnet-0d2cf41ffa49ec54f"
            ],
            "tags": {
              "elbv2.k8s.aws/cluster": "dev-DevOpsProject",
              "ingress.k8s.aws/resource": "LoadBalancer",
              "ingress.k8s.aws/stack": "ingress-nginx/alb-nginx"
            },
            "vpc_id": "vpc-035cd613c43fc31f5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "alb_nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "ingress-nginx/alb-nginx",
            "metadata": [
              {
                "annotations": {
                  "alb.ingress.kubernetes.io/certificate-arn": "arn:aws:acm:us-east-1:640168420071:certificate/62ebb762-81f0-4002-84d0-0f15fd865a24",
                  "alb.ingress.kubernetes.io/healthcheck-path": "/healthz",
                  "alb.ingress.kubernetes.io/listen-ports": "[{\"HTTP\": 80}, {\"HTTPS\": 443}]",
                  "alb.ingress.kubernetes.io/load-balancer-name": "dev-alb",
                  "alb.ingress.kubernetes.io/scheme": "internet-facing",
                  "alb.ingress.kubernetes.io/ssl-redirect": "443",
                  "alb.ingress.kubernetes.io/target-type": "ip"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "alb-nginx",
                "namespace": "ingress-nginx",
                "resource_version": "8593",
                "uid": "b451f1eb-9f65-4214-9093-ec690da0ec5b"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "alb",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "nginx-ingress-controller-ingress-nginx-controller",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "dev-alb-1454280577.us-east-1.elb.amazonaws.com",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": true
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_pod_identity_association.aws_lbc",
            "aws_eks_pod_identity_association.ebs_csi_driver",
            "aws_iam_role.aws_lbc",
            "aws_iam_role.ebs_csi_driver",
            "aws_iam_role_policy.aws_lbc",
            "aws_iam_role_policy_attachment.ebs_csi_driver",
            "data.aws_acm_certificate.cert",
            "data.aws_iam_policy_document.aws_lbc",
            "data.aws_iam_policy_document.aws_lbc_assume",
            "data.aws_iam_policy_document.ebs_csi_driver",
            "data.aws_route53_zone.zone",
            "helm_release.nginx",
            "module.acm.aws_acm_certificate.this",
            "module.acm.aws_acm_certificate_validation.this",
            "module.acm.aws_route53_record.validation",
            "module.eks_blueprints_addons.aws_autoscaling_group_tag.aws_node_termination_handler",
            "module.eks_blueprints_addons.aws_autoscaling_lifecycle_hook.aws_node_termination_handler",
            "module.eks_blueprints_addons.aws_cloudformation_stack.usage_telemetry",
            "module.eks_blueprints_addons.aws_cloudwatch_event_rule.aws_node_termination_handler",
            "module.eks_blueprints_addons.aws_cloudwatch_event_rule.karpenter",
            "module.eks_blueprints_addons.aws_cloudwatch_event_target.aws_node_termination_handler",
            "module.eks_blueprints_addons.aws_cloudwatch_event_target.karpenter",
            "module.eks_blueprints_addons.aws_cloudwatch_log_group.aws_for_fluentbit",
            "module.eks_blueprints_addons.aws_cloudwatch_log_group.fargate_fluentbit",
            "module.eks_blueprints_addons.aws_eks_addon.this",
            "module.eks_blueprints_addons.aws_iam_instance_profile.karpenter",
            "module.eks_blueprints_addons.aws_iam_policy.fargate_fluentbit",
            "module.eks_blueprints_addons.aws_iam_role.karpenter",
            "module.eks_blueprints_addons.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.aws_iam_role_policy_attachment.karpenter",
            "module.eks_blueprints_addons.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.data.aws_eks_addon_version.this",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.aws_efs_csi_driver",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.aws_for_fluentbit",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.aws_fsx_csi_driver",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.aws_gateway_api_controller",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.aws_load_balancer_controller",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.aws_node_termination_handler",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.aws_privateca_issuer",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.cert_manager",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.cluster_autoscaler",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.external_dns",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.external_secrets",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.fargate_fluentbit",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.karpenter",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.karpenter_assume_role",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.velero",
            "module.eks_blueprints_addons.data.aws_partition.current",
            "module.eks_blueprints_addons.data.aws_region.current",
            "module.eks_blueprints_addons.helm_release.this",
            "module.eks_blueprints_addons.kubernetes_config_map_v1.aws_logging",
            "module.eks_blueprints_addons.kubernetes_config_map_v1_data.aws_for_fluentbit_containerinsights",
            "module.eks_blueprints_addons.kubernetes_namespace_v1.aws_observability",
            "module.eks_blueprints_addons.module.argo_events.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.argo_events.aws_iam_role.this",
            "module.eks_blueprints_addons.module.argo_events.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.argo_events.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.argo_events.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.argo_events.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.argo_events.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.argo_events.data.aws_partition.current",
            "module.eks_blueprints_addons.module.argo_events.helm_release.this",
            "module.eks_blueprints_addons.module.argo_rollouts.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.argo_rollouts.aws_iam_role.this",
            "module.eks_blueprints_addons.module.argo_rollouts.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.argo_rollouts.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.argo_rollouts.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.argo_rollouts.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.argo_rollouts.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.argo_rollouts.data.aws_partition.current",
            "module.eks_blueprints_addons.module.argo_rollouts.helm_release.this",
            "module.eks_blueprints_addons.module.argo_workflows.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.argo_workflows.aws_iam_role.this",
            "module.eks_blueprints_addons.module.argo_workflows.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.argo_workflows.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.argo_workflows.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.argo_workflows.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.argo_workflows.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.argo_workflows.data.aws_partition.current",
            "module.eks_blueprints_addons.module.argo_workflows.helm_release.this",
            "module.eks_blueprints_addons.module.argocd.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.argocd.aws_iam_role.this",
            "module.eks_blueprints_addons.module.argocd.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.argocd.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.argocd.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.argocd.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.argocd.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.argocd.data.aws_partition.current",
            "module.eks_blueprints_addons.module.argocd.helm_release.this",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.aws_iam_role.this",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.data.aws_partition.current",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.helm_release.this",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.aws_iam_role.this",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.data.aws_partition.current",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.helm_release.this",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.aws_iam_role.this",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.data.aws_partition.current",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.helm_release.this",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.aws_iam_role.this",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.data.aws_partition.current",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.helm_release.this",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.aws_iam_role.this",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.data.aws_partition.current",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.helm_release.this",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.aws_iam_role.this",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.data.aws_partition.current",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.helm_release.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.aws_iam_role.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.data.aws_partition.current",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.helm_release.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.aws_sqs_queue.dlq",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.aws_sqs_queue.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.aws_sqs_queue_policy.dlq",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.aws_sqs_queue_policy.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.aws_sqs_queue_redrive_allow_policy.dlq",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.aws_sqs_queue_redrive_allow_policy.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.aws_sqs_queue_redrive_policy.dlq",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.aws_sqs_queue_redrive_policy.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.data.aws_iam_policy_document.dlq",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.aws_iam_role.this",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.data.aws_partition.current",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.helm_release.this",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.aws_iam_role.this",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.data.aws_partition.current",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.helm_release.this",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.aws_iam_role.this",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.data.aws_partition.current",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.helm_release.this",
            "module.eks_blueprints_addons.module.cert_manager.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.cert_manager.aws_iam_role.this",
            "module.eks_blueprints_addons.module.cert_manager.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.cert_manager.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.cert_manager.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.cert_manager.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.cert_manager.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.cert_manager.data.aws_partition.current",
            "module.eks_blueprints_addons.module.cert_manager.helm_release.this",
            "module.eks_blueprints_addons.module.cluster_autoscaler.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.cluster_autoscaler.aws_iam_role.this",
            "module.eks_blueprints_addons.module.cluster_autoscaler.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.cluster_autoscaler.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.cluster_autoscaler.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.cluster_autoscaler.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.cluster_autoscaler.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.cluster_autoscaler.data.aws_partition.current",
            "module.eks_blueprints_addons.module.cluster_autoscaler.helm_release.this",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.aws_iam_role.this",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.data.aws_partition.current",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.helm_release.this",
            "module.eks_blueprints_addons.module.external_dns.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.external_dns.aws_iam_role.this",
            "module.eks_blueprints_addons.module.external_dns.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.external_dns.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.external_dns.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.external_dns.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.external_dns.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.external_dns.data.aws_partition.current",
            "module.eks_blueprints_addons.module.external_dns.helm_release.this",
            "module.eks_blueprints_addons.module.external_secrets.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.external_secrets.aws_iam_role.this",
            "module.eks_blueprints_addons.module.external_secrets.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.external_secrets.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.external_secrets.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.external_secrets.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.external_secrets.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.external_secrets.data.aws_partition.current",
            "module.eks_blueprints_addons.module.external_secrets.helm_release.this",
            "module.eks_blueprints_addons.module.gatekeeper.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.gatekeeper.aws_iam_role.this",
            "module.eks_blueprints_addons.module.gatekeeper.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.gatekeeper.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.gatekeeper.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.gatekeeper.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.gatekeeper.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.gatekeeper.data.aws_partition.current",
            "module.eks_blueprints_addons.module.gatekeeper.helm_release.this",
            "module.eks_blueprints_addons.module.ingress_nginx.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.ingress_nginx.aws_iam_role.this",
            "module.eks_blueprints_addons.module.ingress_nginx.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.ingress_nginx.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.ingress_nginx.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.ingress_nginx.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.ingress_nginx.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.ingress_nginx.data.aws_partition.current",
            "module.eks_blueprints_addons.module.ingress_nginx.helm_release.this",
            "module.eks_blueprints_addons.module.karpenter.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.karpenter.aws_iam_role.this",
            "module.eks_blueprints_addons.module.karpenter.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.karpenter.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.karpenter.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.karpenter.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.karpenter.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.karpenter.data.aws_partition.current",
            "module.eks_blueprints_addons.module.karpenter.helm_release.this",
            "module.eks_blueprints_addons.module.karpenter_sqs.aws_sqs_queue.dlq",
            "module.eks_blueprints_addons.module.karpenter_sqs.aws_sqs_queue.this",
            "module.eks_blueprints_addons.module.karpenter_sqs.aws_sqs_queue_policy.dlq",
            "module.eks_blueprints_addons.module.karpenter_sqs.aws_sqs_queue_policy.this",
            "module.eks_blueprints_addons.module.karpenter_sqs.aws_sqs_queue_redrive_allow_policy.dlq",
            "module.eks_blueprints_addons.module.karpenter_sqs.aws_sqs_queue_redrive_allow_policy.this",
            "module.eks_blueprints_addons.module.karpenter_sqs.aws_sqs_queue_redrive_policy.dlq",
            "module.eks_blueprints_addons.module.karpenter_sqs.aws_sqs_queue_redrive_policy.this",
            "module.eks_blueprints_addons.module.karpenter_sqs.data.aws_iam_policy_document.dlq",
            "module.eks_blueprints_addons.module.karpenter_sqs.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.aws_iam_role.this",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.data.aws_partition.current",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.helm_release.this",
            "module.eks_blueprints_addons.module.metrics_server.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.metrics_server.aws_iam_role.this",
            "module.eks_blueprints_addons.module.metrics_server.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.metrics_server.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.metrics_server.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.metrics_server.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.metrics_server.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.metrics_server.data.aws_partition.current",
            "module.eks_blueprints_addons.module.metrics_server.helm_release.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.aws_iam_role.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.data.aws_partition.current",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.helm_release.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.aws_iam_role.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.data.aws_partition.current",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.helm_release.this",
            "module.eks_blueprints_addons.module.velero.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.velero.aws_iam_role.this",
            "module.eks_blueprints_addons.module.velero.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.velero.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.velero.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.velero.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.velero.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.velero.data.aws_partition.current",
            "module.eks_blueprints_addons.module.velero.helm_release.this",
            "module.eks_blueprints_addons.module.vpa.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.vpa.aws_iam_role.this",
            "module.eks_blueprints_addons.module.vpa.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.vpa.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.vpa.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.vpa.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.vpa.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.vpa.data.aws_partition.current",
            "module.eks_blueprints_addons.module.vpa.helm_release.this",
            "module.eks_blueprints_addons.random_bytes.this",
            "module.eks_blueprints_addons.time_sleep.this",
            "module.eks_blueprints_addons_lbc.aws_autoscaling_group_tag.aws_node_termination_handler",
            "module.eks_blueprints_addons_lbc.aws_autoscaling_lifecycle_hook.aws_node_termination_handler",
            "module.eks_blueprints_addons_lbc.aws_cloudformation_stack.usage_telemetry",
            "module.eks_blueprints_addons_lbc.aws_cloudwatch_event_rule.aws_node_termination_handler",
            "module.eks_blueprints_addons_lbc.aws_cloudwatch_event_rule.karpenter",
            "module.eks_blueprints_addons_lbc.aws_cloudwatch_event_target.aws_node_termination_handler",
            "module.eks_blueprints_addons_lbc.aws_cloudwatch_event_target.karpenter",
            "module.eks_blueprints_addons_lbc.aws_cloudwatch_log_group.aws_for_fluentbit",
            "module.eks_blueprints_addons_lbc.aws_cloudwatch_log_group.fargate_fluentbit",
            "module.eks_blueprints_addons_lbc.aws_eks_addon.this",
            "module.eks_blueprints_addons_lbc.aws_iam_instance_profile.karpenter",
            "module.eks_blueprints_addons_lbc.aws_iam_policy.fargate_fluentbit",
            "module.eks_blueprints_addons_lbc.aws_iam_role.karpenter",
            "module.eks_blueprints_addons_lbc.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.aws_iam_role_policy_attachment.karpenter",
            "module.eks_blueprints_addons_lbc.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.data.aws_eks_addon_version.this",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.aws_efs_csi_driver",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.aws_for_fluentbit",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.aws_fsx_csi_driver",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.aws_gateway_api_controller",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.aws_load_balancer_controller",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.aws_node_termination_handler",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.aws_privateca_issuer",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.cert_manager",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.cluster_autoscaler",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.external_dns",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.external_secrets",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.fargate_fluentbit",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.karpenter",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.karpenter_assume_role",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.velero",
            "module.eks_blueprints_addons_lbc.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.data.aws_region.current",
            "module.eks_blueprints_addons_lbc.helm_release.this",
            "module.eks_blueprints_addons_lbc.kubernetes_config_map_v1.aws_logging",
            "module.eks_blueprints_addons_lbc.kubernetes_config_map_v1_data.aws_for_fluentbit_containerinsights",
            "module.eks_blueprints_addons_lbc.kubernetes_namespace_v1.aws_observability",
            "module.eks_blueprints_addons_lbc.module.argo_events.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.argo_events.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.argo_events.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.argo_events.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.argo_events.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.argo_events.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.argo_events.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.argo_events.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.argo_events.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.argo_rollouts.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.argo_rollouts.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.argo_rollouts.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.argo_rollouts.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.argo_rollouts.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.argo_rollouts.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.argo_rollouts.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.argo_rollouts.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.argo_rollouts.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.argo_workflows.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.argo_workflows.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.argo_workflows.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.argo_workflows.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.argo_workflows.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.argo_workflows.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.argo_workflows.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.argo_workflows.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.argo_workflows.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.argocd.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.argocd.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.argocd.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.argocd.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.argocd.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.argocd.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.argocd.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.argocd.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.argocd.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.aws_cloudwatch_metrics.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_cloudwatch_metrics.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.aws_cloudwatch_metrics.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.aws_cloudwatch_metrics.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.aws_cloudwatch_metrics.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.aws_cloudwatch_metrics.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.aws_cloudwatch_metrics.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.aws_cloudwatch_metrics.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.aws_cloudwatch_metrics.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.aws_efs_csi_driver.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_efs_csi_driver.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.aws_efs_csi_driver.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.aws_efs_csi_driver.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.aws_efs_csi_driver.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.aws_efs_csi_driver.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.aws_efs_csi_driver.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.aws_efs_csi_driver.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.aws_efs_csi_driver.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.aws_for_fluentbit.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_for_fluentbit.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.aws_for_fluentbit.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.aws_for_fluentbit.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.aws_for_fluentbit.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.aws_for_fluentbit.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.aws_for_fluentbit.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.aws_for_fluentbit.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.aws_for_fluentbit.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.aws_fsx_csi_driver.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_fsx_csi_driver.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.aws_fsx_csi_driver.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.aws_fsx_csi_driver.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.aws_fsx_csi_driver.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.aws_fsx_csi_driver.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.aws_fsx_csi_driver.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.aws_fsx_csi_driver.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.aws_fsx_csi_driver.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.aws_gateway_api_controller.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_gateway_api_controller.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.aws_gateway_api_controller.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.aws_gateway_api_controller.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.aws_gateway_api_controller.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.aws_gateway_api_controller.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.aws_gateway_api_controller.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.aws_gateway_api_controller.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.aws_gateway_api_controller.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.aws_load_balancer_controller.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_load_balancer_controller.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.aws_load_balancer_controller.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.aws_load_balancer_controller.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.aws_load_balancer_controller.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.aws_load_balancer_controller.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.aws_load_balancer_controller.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.aws_load_balancer_controller.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.aws_load_balancer_controller.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler_sqs.aws_sqs_queue.dlq",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler_sqs.aws_sqs_queue.this",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler_sqs.aws_sqs_queue_policy.dlq",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler_sqs.aws_sqs_queue_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler_sqs.aws_sqs_queue_redrive_allow_policy.dlq",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler_sqs.aws_sqs_queue_redrive_allow_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler_sqs.aws_sqs_queue_redrive_policy.dlq",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler_sqs.aws_sqs_queue_redrive_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler_sqs.data.aws_iam_policy_document.dlq",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler_sqs.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.aws_privateca_issuer.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_privateca_issuer.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.aws_privateca_issuer.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.aws_privateca_issuer.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.aws_privateca_issuer.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.aws_privateca_issuer.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.aws_privateca_issuer.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.aws_privateca_issuer.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.aws_privateca_issuer.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_shadow.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_shadow.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_shadow.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_shadow.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_shadow.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_shadow.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_shadow.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_shadow.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_shadow.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_update_operator.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_update_operator.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_update_operator.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_update_operator.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_update_operator.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_update_operator.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_update_operator.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_update_operator.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_update_operator.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.cert_manager.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.cert_manager.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.cert_manager.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.cert_manager.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.cert_manager.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.cert_manager.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.cert_manager.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.cert_manager.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.cert_manager.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.cluster_autoscaler.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.cluster_autoscaler.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.cluster_autoscaler.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.cluster_autoscaler.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.cluster_autoscaler.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.cluster_autoscaler.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.cluster_autoscaler.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.cluster_autoscaler.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.cluster_autoscaler.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.cluster_proportional_autoscaler.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.cluster_proportional_autoscaler.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.cluster_proportional_autoscaler.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.cluster_proportional_autoscaler.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.cluster_proportional_autoscaler.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.cluster_proportional_autoscaler.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.cluster_proportional_autoscaler.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.cluster_proportional_autoscaler.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.cluster_proportional_autoscaler.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.external_dns.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.external_dns.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.external_dns.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.external_dns.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.external_dns.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.external_dns.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.external_dns.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.external_dns.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.external_dns.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.external_secrets.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.external_secrets.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.external_secrets.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.external_secrets.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.external_secrets.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.external_secrets.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.external_secrets.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.external_secrets.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.external_secrets.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.gatekeeper.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.gatekeeper.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.gatekeeper.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.gatekeeper.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.gatekeeper.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.gatekeeper.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.gatekeeper.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.gatekeeper.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.gatekeeper.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.ingress_nginx.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.ingress_nginx.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.ingress_nginx.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.ingress_nginx.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.ingress_nginx.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.ingress_nginx.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.ingress_nginx.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.ingress_nginx.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.ingress_nginx.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.karpenter.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.karpenter.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.karpenter.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.karpenter.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.karpenter.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.karpenter.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.karpenter.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.karpenter.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.karpenter.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.karpenter_sqs.aws_sqs_queue.dlq",
            "module.eks_blueprints_addons_lbc.module.karpenter_sqs.aws_sqs_queue.this",
            "module.eks_blueprints_addons_lbc.module.karpenter_sqs.aws_sqs_queue_policy.dlq",
            "module.eks_blueprints_addons_lbc.module.karpenter_sqs.aws_sqs_queue_policy.this",
            "module.eks_blueprints_addons_lbc.module.karpenter_sqs.aws_sqs_queue_redrive_allow_policy.dlq",
            "module.eks_blueprints_addons_lbc.module.karpenter_sqs.aws_sqs_queue_redrive_allow_policy.this",
            "module.eks_blueprints_addons_lbc.module.karpenter_sqs.aws_sqs_queue_redrive_policy.dlq",
            "module.eks_blueprints_addons_lbc.module.karpenter_sqs.aws_sqs_queue_redrive_policy.this",
            "module.eks_blueprints_addons_lbc.module.karpenter_sqs.data.aws_iam_policy_document.dlq",
            "module.eks_blueprints_addons_lbc.module.karpenter_sqs.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.kube_prometheus_stack.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.kube_prometheus_stack.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.kube_prometheus_stack.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.kube_prometheus_stack.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.kube_prometheus_stack.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.kube_prometheus_stack.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.kube_prometheus_stack.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.kube_prometheus_stack.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.kube_prometheus_stack.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.metrics_server.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.metrics_server.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.metrics_server.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.metrics_server.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.metrics_server.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.metrics_server.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.metrics_server.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.metrics_server.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.metrics_server.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver_provider_aws.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver_provider_aws.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver_provider_aws.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver_provider_aws.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver_provider_aws.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver_provider_aws.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver_provider_aws.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver_provider_aws.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver_provider_aws.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.velero.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.velero.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.velero.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.velero.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.velero.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.velero.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.velero.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.velero.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.velero.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.vpa.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.vpa.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.vpa.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.vpa.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.vpa.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.vpa.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.vpa.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.vpa.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.vpa.helm_release.this",
            "module.eks_blueprints_addons_lbc.random_bytes.this",
            "module.eks_blueprints_addons_lbc.time_sleep.this",
            "null_resource.ingress_cleanup",
            "null_resource.wait_for_aws_lb_controller"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "arogcd",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "argocd/argocd-ingress",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "argocd-ingress",
                "namespace": "argocd",
                "resource_version": "8715",
                "uid": "d93f402a-aa07-4277-8b2f-72301a9b980d"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "argocd.dev.ybort.shop",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "argocd-server",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "172.20.152.74"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_pod_identity_association.aws_lbc",
            "aws_eks_pod_identity_association.ebs_csi_driver",
            "aws_iam_role.aws_lbc",
            "aws_iam_role.ebs_csi_driver",
            "aws_iam_role_policy.aws_lbc",
            "aws_iam_role_policy_attachment.ebs_csi_driver",
            "data.aws_acm_certificate.cert",
            "data.aws_iam_policy_document.aws_lbc",
            "data.aws_iam_policy_document.aws_lbc_assume",
            "data.aws_iam_policy_document.ebs_csi_driver",
            "data.aws_route53_zone.zone",
            "helm_release.nginx",
            "kubernetes_ingress_v1.alb_nginx",
            "module.acm.aws_acm_certificate.this",
            "module.acm.aws_acm_certificate_validation.this",
            "module.acm.aws_route53_record.validation",
            "module.eks_blueprints_addons.aws_autoscaling_group_tag.aws_node_termination_handler",
            "module.eks_blueprints_addons.aws_autoscaling_lifecycle_hook.aws_node_termination_handler",
            "module.eks_blueprints_addons.aws_cloudformation_stack.usage_telemetry",
            "module.eks_blueprints_addons.aws_cloudwatch_event_rule.aws_node_termination_handler",
            "module.eks_blueprints_addons.aws_cloudwatch_event_rule.karpenter",
            "module.eks_blueprints_addons.aws_cloudwatch_event_target.aws_node_termination_handler",
            "module.eks_blueprints_addons.aws_cloudwatch_event_target.karpenter",
            "module.eks_blueprints_addons.aws_cloudwatch_log_group.aws_for_fluentbit",
            "module.eks_blueprints_addons.aws_cloudwatch_log_group.fargate_fluentbit",
            "module.eks_blueprints_addons.aws_eks_addon.this",
            "module.eks_blueprints_addons.aws_iam_instance_profile.karpenter",
            "module.eks_blueprints_addons.aws_iam_policy.fargate_fluentbit",
            "module.eks_blueprints_addons.aws_iam_role.karpenter",
            "module.eks_blueprints_addons.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.aws_iam_role_policy_attachment.karpenter",
            "module.eks_blueprints_addons.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.data.aws_eks_addon_version.this",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.aws_efs_csi_driver",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.aws_for_fluentbit",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.aws_fsx_csi_driver",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.aws_gateway_api_controller",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.aws_load_balancer_controller",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.aws_node_termination_handler",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.aws_privateca_issuer",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.cert_manager",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.cluster_autoscaler",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.external_dns",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.external_secrets",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.fargate_fluentbit",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.karpenter",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.karpenter_assume_role",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.velero",
            "module.eks_blueprints_addons.data.aws_partition.current",
            "module.eks_blueprints_addons.data.aws_region.current",
            "module.eks_blueprints_addons.helm_release.this",
            "module.eks_blueprints_addons.kubernetes_config_map_v1.aws_logging",
            "module.eks_blueprints_addons.kubernetes_config_map_v1_data.aws_for_fluentbit_containerinsights",
            "module.eks_blueprints_addons.kubernetes_namespace_v1.aws_observability",
            "module.eks_blueprints_addons.module.argo_events.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.argo_events.aws_iam_role.this",
            "module.eks_blueprints_addons.module.argo_events.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.argo_events.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.argo_events.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.argo_events.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.argo_events.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.argo_events.data.aws_partition.current",
            "module.eks_blueprints_addons.module.argo_events.helm_release.this",
            "module.eks_blueprints_addons.module.argo_rollouts.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.argo_rollouts.aws_iam_role.this",
            "module.eks_blueprints_addons.module.argo_rollouts.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.argo_rollouts.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.argo_rollouts.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.argo_rollouts.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.argo_rollouts.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.argo_rollouts.data.aws_partition.current",
            "module.eks_blueprints_addons.module.argo_rollouts.helm_release.this",
            "module.eks_blueprints_addons.module.argo_workflows.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.argo_workflows.aws_iam_role.this",
            "module.eks_blueprints_addons.module.argo_workflows.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.argo_workflows.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.argo_workflows.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.argo_workflows.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.argo_workflows.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.argo_workflows.data.aws_partition.current",
            "module.eks_blueprints_addons.module.argo_workflows.helm_release.this",
            "module.eks_blueprints_addons.module.argocd.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.argocd.aws_iam_role.this",
            "module.eks_blueprints_addons.module.argocd.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.argocd.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.argocd.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.argocd.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.argocd.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.argocd.data.aws_partition.current",
            "module.eks_blueprints_addons.module.argocd.helm_release.this",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.aws_iam_role.this",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.data.aws_partition.current",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.helm_release.this",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.aws_iam_role.this",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.data.aws_partition.current",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.helm_release.this",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.aws_iam_role.this",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.data.aws_partition.current",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.helm_release.this",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.aws_iam_role.this",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.data.aws_partition.current",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.helm_release.this",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.aws_iam_role.this",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.data.aws_partition.current",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.helm_release.this",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.aws_iam_role.this",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.data.aws_partition.current",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.helm_release.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.aws_iam_role.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.data.aws_partition.current",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.helm_release.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.aws_sqs_queue.dlq",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.aws_sqs_queue.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.aws_sqs_queue_policy.dlq",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.aws_sqs_queue_policy.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.aws_sqs_queue_redrive_allow_policy.dlq",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.aws_sqs_queue_redrive_allow_policy.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.aws_sqs_queue_redrive_policy.dlq",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.aws_sqs_queue_redrive_policy.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.data.aws_iam_policy_document.dlq",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.aws_iam_role.this",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.data.aws_partition.current",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.helm_release.this",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.aws_iam_role.this",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.data.aws_partition.current",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.helm_release.this",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.aws_iam_role.this",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.data.aws_partition.current",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.helm_release.this",
            "module.eks_blueprints_addons.module.cert_manager.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.cert_manager.aws_iam_role.this",
            "module.eks_blueprints_addons.module.cert_manager.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.cert_manager.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.cert_manager.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.cert_manager.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.cert_manager.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.cert_manager.data.aws_partition.current",
            "module.eks_blueprints_addons.module.cert_manager.helm_release.this",
            "module.eks_blueprints_addons.module.cluster_autoscaler.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.cluster_autoscaler.aws_iam_role.this",
            "module.eks_blueprints_addons.module.cluster_autoscaler.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.cluster_autoscaler.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.cluster_autoscaler.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.cluster_autoscaler.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.cluster_autoscaler.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.cluster_autoscaler.data.aws_partition.current",
            "module.eks_blueprints_addons.module.cluster_autoscaler.helm_release.this",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.aws_iam_role.this",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.data.aws_partition.current",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.helm_release.this",
            "module.eks_blueprints_addons.module.external_dns.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.external_dns.aws_iam_role.this",
            "module.eks_blueprints_addons.module.external_dns.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.external_dns.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.external_dns.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.external_dns.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.external_dns.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.external_dns.data.aws_partition.current",
            "module.eks_blueprints_addons.module.external_dns.helm_release.this",
            "module.eks_blueprints_addons.module.external_secrets.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.external_secrets.aws_iam_role.this",
            "module.eks_blueprints_addons.module.external_secrets.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.external_secrets.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.external_secrets.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.external_secrets.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.external_secrets.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.external_secrets.data.aws_partition.current",
            "module.eks_blueprints_addons.module.external_secrets.helm_release.this",
            "module.eks_blueprints_addons.module.gatekeeper.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.gatekeeper.aws_iam_role.this",
            "module.eks_blueprints_addons.module.gatekeeper.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.gatekeeper.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.gatekeeper.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.gatekeeper.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.gatekeeper.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.gatekeeper.data.aws_partition.current",
            "module.eks_blueprints_addons.module.gatekeeper.helm_release.this",
            "module.eks_blueprints_addons.module.ingress_nginx.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.ingress_nginx.aws_iam_role.this",
            "module.eks_blueprints_addons.module.ingress_nginx.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.ingress_nginx.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.ingress_nginx.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.ingress_nginx.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.ingress_nginx.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.ingress_nginx.data.aws_partition.current",
            "module.eks_blueprints_addons.module.ingress_nginx.helm_release.this",
            "module.eks_blueprints_addons.module.karpenter.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.karpenter.aws_iam_role.this",
            "module.eks_blueprints_addons.module.karpenter.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.karpenter.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.karpenter.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.karpenter.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.karpenter.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.karpenter.data.aws_partition.current",
            "module.eks_blueprints_addons.module.karpenter.helm_release.this",
            "module.eks_blueprints_addons.module.karpenter_sqs.aws_sqs_queue.dlq",
            "module.eks_blueprints_addons.module.karpenter_sqs.aws_sqs_queue.this",
            "module.eks_blueprints_addons.module.karpenter_sqs.aws_sqs_queue_policy.dlq",
            "module.eks_blueprints_addons.module.karpenter_sqs.aws_sqs_queue_policy.this",
            "module.eks_blueprints_addons.module.karpenter_sqs.aws_sqs_queue_redrive_allow_policy.dlq",
            "module.eks_blueprints_addons.module.karpenter_sqs.aws_sqs_queue_redrive_allow_policy.this",
            "module.eks_blueprints_addons.module.karpenter_sqs.aws_sqs_queue_redrive_policy.dlq",
            "module.eks_blueprints_addons.module.karpenter_sqs.aws_sqs_queue_redrive_policy.this",
            "module.eks_blueprints_addons.module.karpenter_sqs.data.aws_iam_policy_document.dlq",
            "module.eks_blueprints_addons.module.karpenter_sqs.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.aws_iam_role.this",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.data.aws_partition.current",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.helm_release.this",
            "module.eks_blueprints_addons.module.metrics_server.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.metrics_server.aws_iam_role.this",
            "module.eks_blueprints_addons.module.metrics_server.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.metrics_server.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.metrics_server.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.metrics_server.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.metrics_server.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.metrics_server.data.aws_partition.current",
            "module.eks_blueprints_addons.module.metrics_server.helm_release.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.aws_iam_role.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.data.aws_partition.current",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.helm_release.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.aws_iam_role.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.data.aws_partition.current",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.helm_release.this",
            "module.eks_blueprints_addons.module.velero.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.velero.aws_iam_role.this",
            "module.eks_blueprints_addons.module.velero.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.velero.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.velero.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.velero.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.velero.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.velero.data.aws_partition.current",
            "module.eks_blueprints_addons.module.velero.helm_release.this",
            "module.eks_blueprints_addons.module.vpa.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.vpa.aws_iam_role.this",
            "module.eks_blueprints_addons.module.vpa.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.vpa.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.vpa.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.vpa.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.vpa.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.vpa.data.aws_partition.current",
            "module.eks_blueprints_addons.module.vpa.helm_release.this",
            "module.eks_blueprints_addons.random_bytes.this",
            "module.eks_blueprints_addons.time_sleep.this",
            "module.eks_blueprints_addons_lbc.aws_autoscaling_group_tag.aws_node_termination_handler",
            "module.eks_blueprints_addons_lbc.aws_autoscaling_lifecycle_hook.aws_node_termination_handler",
            "module.eks_blueprints_addons_lbc.aws_cloudformation_stack.usage_telemetry",
            "module.eks_blueprints_addons_lbc.aws_cloudwatch_event_rule.aws_node_termination_handler",
            "module.eks_blueprints_addons_lbc.aws_cloudwatch_event_rule.karpenter",
            "module.eks_blueprints_addons_lbc.aws_cloudwatch_event_target.aws_node_termination_handler",
            "module.eks_blueprints_addons_lbc.aws_cloudwatch_event_target.karpenter",
            "module.eks_blueprints_addons_lbc.aws_cloudwatch_log_group.aws_for_fluentbit",
            "module.eks_blueprints_addons_lbc.aws_cloudwatch_log_group.fargate_fluentbit",
            "module.eks_blueprints_addons_lbc.aws_eks_addon.this",
            "module.eks_blueprints_addons_lbc.aws_iam_instance_profile.karpenter",
            "module.eks_blueprints_addons_lbc.aws_iam_policy.fargate_fluentbit",
            "module.eks_blueprints_addons_lbc.aws_iam_role.karpenter",
            "module.eks_blueprints_addons_lbc.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.aws_iam_role_policy_attachment.karpenter",
            "module.eks_blueprints_addons_lbc.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.data.aws_eks_addon_version.this",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.aws_efs_csi_driver",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.aws_for_fluentbit",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.aws_fsx_csi_driver",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.aws_gateway_api_controller",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.aws_load_balancer_controller",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.aws_node_termination_handler",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.aws_privateca_issuer",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.cert_manager",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.cluster_autoscaler",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.external_dns",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.external_secrets",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.fargate_fluentbit",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.karpenter",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.karpenter_assume_role",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.velero",
            "module.eks_blueprints_addons_lbc.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.data.aws_region.current",
            "module.eks_blueprints_addons_lbc.helm_release.this",
            "module.eks_blueprints_addons_lbc.kubernetes_config_map_v1.aws_logging",
            "module.eks_blueprints_addons_lbc.kubernetes_config_map_v1_data.aws_for_fluentbit_containerinsights",
            "module.eks_blueprints_addons_lbc.kubernetes_namespace_v1.aws_observability",
            "module.eks_blueprints_addons_lbc.module.argo_events.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.argo_events.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.argo_events.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.argo_events.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.argo_events.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.argo_events.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.argo_events.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.argo_events.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.argo_events.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.argo_rollouts.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.argo_rollouts.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.argo_rollouts.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.argo_rollouts.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.argo_rollouts.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.argo_rollouts.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.argo_rollouts.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.argo_rollouts.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.argo_rollouts.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.argo_workflows.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.argo_workflows.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.argo_workflows.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.argo_workflows.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.argo_workflows.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.argo_workflows.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.argo_workflows.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.argo_workflows.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.argo_workflows.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.argocd.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.argocd.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.argocd.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.argocd.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.argocd.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.argocd.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.argocd.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.argocd.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.argocd.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.aws_cloudwatch_metrics.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_cloudwatch_metrics.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.aws_cloudwatch_metrics.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.aws_cloudwatch_metrics.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.aws_cloudwatch_metrics.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.aws_cloudwatch_metrics.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.aws_cloudwatch_metrics.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.aws_cloudwatch_metrics.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.aws_cloudwatch_metrics.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.aws_efs_csi_driver.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_efs_csi_driver.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.aws_efs_csi_driver.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.aws_efs_csi_driver.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.aws_efs_csi_driver.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.aws_efs_csi_driver.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.aws_efs_csi_driver.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.aws_efs_csi_driver.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.aws_efs_csi_driver.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.aws_for_fluentbit.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_for_fluentbit.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.aws_for_fluentbit.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.aws_for_fluentbit.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.aws_for_fluentbit.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.aws_for_fluentbit.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.aws_for_fluentbit.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.aws_for_fluentbit.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.aws_for_fluentbit.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.aws_fsx_csi_driver.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_fsx_csi_driver.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.aws_fsx_csi_driver.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.aws_fsx_csi_driver.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.aws_fsx_csi_driver.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.aws_fsx_csi_driver.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.aws_fsx_csi_driver.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.aws_fsx_csi_driver.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.aws_fsx_csi_driver.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.aws_gateway_api_controller.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_gateway_api_controller.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.aws_gateway_api_controller.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.aws_gateway_api_controller.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.aws_gateway_api_controller.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.aws_gateway_api_controller.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.aws_gateway_api_controller.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.aws_gateway_api_controller.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.aws_gateway_api_controller.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.aws_load_balancer_controller.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_load_balancer_controller.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.aws_load_balancer_controller.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.aws_load_balancer_controller.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.aws_load_balancer_controller.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.aws_load_balancer_controller.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.aws_load_balancer_controller.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.aws_load_balancer_controller.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.aws_load_balancer_controller.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler_sqs.aws_sqs_queue.dlq",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler_sqs.aws_sqs_queue.this",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler_sqs.aws_sqs_queue_policy.dlq",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler_sqs.aws_sqs_queue_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler_sqs.aws_sqs_queue_redrive_allow_policy.dlq",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler_sqs.aws_sqs_queue_redrive_allow_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler_sqs.aws_sqs_queue_redrive_policy.dlq",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler_sqs.aws_sqs_queue_redrive_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler_sqs.data.aws_iam_policy_document.dlq",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler_sqs.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.aws_privateca_issuer.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_privateca_issuer.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.aws_privateca_issuer.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.aws_privateca_issuer.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.aws_privateca_issuer.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.aws_privateca_issuer.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.aws_privateca_issuer.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.aws_privateca_issuer.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.aws_privateca_issuer.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_shadow.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_shadow.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_shadow.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_shadow.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_shadow.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_shadow.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_shadow.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_shadow.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_shadow.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_update_operator.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_update_operator.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_update_operator.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_update_operator.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_update_operator.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_update_operator.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_update_operator.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_update_operator.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_update_operator.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.cert_manager.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.cert_manager.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.cert_manager.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.cert_manager.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.cert_manager.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.cert_manager.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.cert_manager.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.cert_manager.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.cert_manager.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.cluster_autoscaler.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.cluster_autoscaler.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.cluster_autoscaler.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.cluster_autoscaler.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.cluster_autoscaler.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.cluster_autoscaler.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.cluster_autoscaler.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.cluster_autoscaler.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.cluster_autoscaler.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.cluster_proportional_autoscaler.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.cluster_proportional_autoscaler.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.cluster_proportional_autoscaler.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.cluster_proportional_autoscaler.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.cluster_proportional_autoscaler.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.cluster_proportional_autoscaler.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.cluster_proportional_autoscaler.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.cluster_proportional_autoscaler.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.cluster_proportional_autoscaler.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.external_dns.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.external_dns.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.external_dns.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.external_dns.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.external_dns.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.external_dns.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.external_dns.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.external_dns.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.external_dns.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.external_secrets.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.external_secrets.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.external_secrets.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.external_secrets.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.external_secrets.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.external_secrets.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.external_secrets.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.external_secrets.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.external_secrets.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.gatekeeper.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.gatekeeper.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.gatekeeper.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.gatekeeper.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.gatekeeper.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.gatekeeper.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.gatekeeper.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.gatekeeper.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.gatekeeper.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.ingress_nginx.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.ingress_nginx.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.ingress_nginx.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.ingress_nginx.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.ingress_nginx.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.ingress_nginx.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.ingress_nginx.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.ingress_nginx.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.ingress_nginx.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.karpenter.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.karpenter.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.karpenter.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.karpenter.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.karpenter.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.karpenter.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.karpenter.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.karpenter.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.karpenter.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.karpenter_sqs.aws_sqs_queue.dlq",
            "module.eks_blueprints_addons_lbc.module.karpenter_sqs.aws_sqs_queue.this",
            "module.eks_blueprints_addons_lbc.module.karpenter_sqs.aws_sqs_queue_policy.dlq",
            "module.eks_blueprints_addons_lbc.module.karpenter_sqs.aws_sqs_queue_policy.this",
            "module.eks_blueprints_addons_lbc.module.karpenter_sqs.aws_sqs_queue_redrive_allow_policy.dlq",
            "module.eks_blueprints_addons_lbc.module.karpenter_sqs.aws_sqs_queue_redrive_allow_policy.this",
            "module.eks_blueprints_addons_lbc.module.karpenter_sqs.aws_sqs_queue_redrive_policy.dlq",
            "module.eks_blueprints_addons_lbc.module.karpenter_sqs.aws_sqs_queue_redrive_policy.this",
            "module.eks_blueprints_addons_lbc.module.karpenter_sqs.data.aws_iam_policy_document.dlq",
            "module.eks_blueprints_addons_lbc.module.karpenter_sqs.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.kube_prometheus_stack.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.kube_prometheus_stack.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.kube_prometheus_stack.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.kube_prometheus_stack.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.kube_prometheus_stack.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.kube_prometheus_stack.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.kube_prometheus_stack.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.kube_prometheus_stack.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.kube_prometheus_stack.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.metrics_server.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.metrics_server.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.metrics_server.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.metrics_server.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.metrics_server.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.metrics_server.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.metrics_server.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.metrics_server.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.metrics_server.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver_provider_aws.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver_provider_aws.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver_provider_aws.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver_provider_aws.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver_provider_aws.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver_provider_aws.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver_provider_aws.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver_provider_aws.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver_provider_aws.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.velero.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.velero.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.velero.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.velero.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.velero.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.velero.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.velero.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.velero.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.velero.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.vpa.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.vpa.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.vpa.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.vpa.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.vpa.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.vpa.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.vpa.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.vpa.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.vpa.helm_release.this",
            "module.eks_blueprints_addons_lbc.random_bytes.this",
            "module.eks_blueprints_addons_lbc.time_sleep.this",
            "null_resource.ingress_cleanup",
            "null_resource.wait_for_aws_lb_controller"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "monitoring/grafana-ingress",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 2,
                "labels": {},
                "name": "grafana-ingress",
                "namespace": "monitoring",
                "resource_version": "15880",
                "uid": "bd50ade4-805e-448a-bbe8-6a93ea06b062"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "grafana.dev.ybort.shop",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "kube-prometheus-stack-grafana",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "172.20.152.74"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_pod_identity_association.aws_lbc",
            "aws_eks_pod_identity_association.ebs_csi_driver",
            "aws_iam_role.aws_lbc",
            "aws_iam_role.ebs_csi_driver",
            "aws_iam_role_policy.aws_lbc",
            "aws_iam_role_policy_attachment.ebs_csi_driver",
            "data.aws_acm_certificate.cert",
            "data.aws_iam_policy_document.aws_lbc",
            "data.aws_iam_policy_document.aws_lbc_assume",
            "data.aws_iam_policy_document.ebs_csi_driver",
            "data.aws_route53_zone.zone",
            "helm_release.nginx",
            "kubernetes_ingress_v1.alb_nginx",
            "module.acm.aws_acm_certificate.this",
            "module.acm.aws_acm_certificate_validation.this",
            "module.acm.aws_route53_record.validation",
            "module.eks_blueprints_addons.aws_autoscaling_group_tag.aws_node_termination_handler",
            "module.eks_blueprints_addons.aws_autoscaling_lifecycle_hook.aws_node_termination_handler",
            "module.eks_blueprints_addons.aws_cloudformation_stack.usage_telemetry",
            "module.eks_blueprints_addons.aws_cloudwatch_event_rule.aws_node_termination_handler",
            "module.eks_blueprints_addons.aws_cloudwatch_event_rule.karpenter",
            "module.eks_blueprints_addons.aws_cloudwatch_event_target.aws_node_termination_handler",
            "module.eks_blueprints_addons.aws_cloudwatch_event_target.karpenter",
            "module.eks_blueprints_addons.aws_cloudwatch_log_group.aws_for_fluentbit",
            "module.eks_blueprints_addons.aws_cloudwatch_log_group.fargate_fluentbit",
            "module.eks_blueprints_addons.aws_eks_addon.this",
            "module.eks_blueprints_addons.aws_iam_instance_profile.karpenter",
            "module.eks_blueprints_addons.aws_iam_policy.fargate_fluentbit",
            "module.eks_blueprints_addons.aws_iam_role.karpenter",
            "module.eks_blueprints_addons.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.aws_iam_role_policy_attachment.karpenter",
            "module.eks_blueprints_addons.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.data.aws_eks_addon_version.this",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.aws_efs_csi_driver",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.aws_for_fluentbit",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.aws_fsx_csi_driver",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.aws_gateway_api_controller",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.aws_load_balancer_controller",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.aws_node_termination_handler",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.aws_privateca_issuer",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.cert_manager",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.cluster_autoscaler",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.external_dns",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.external_secrets",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.fargate_fluentbit",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.karpenter",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.karpenter_assume_role",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.velero",
            "module.eks_blueprints_addons.data.aws_partition.current",
            "module.eks_blueprints_addons.data.aws_region.current",
            "module.eks_blueprints_addons.helm_release.this",
            "module.eks_blueprints_addons.kubernetes_config_map_v1.aws_logging",
            "module.eks_blueprints_addons.kubernetes_config_map_v1_data.aws_for_fluentbit_containerinsights",
            "module.eks_blueprints_addons.kubernetes_namespace_v1.aws_observability",
            "module.eks_blueprints_addons.module.argo_events.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.argo_events.aws_iam_role.this",
            "module.eks_blueprints_addons.module.argo_events.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.argo_events.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.argo_events.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.argo_events.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.argo_events.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.argo_events.data.aws_partition.current",
            "module.eks_blueprints_addons.module.argo_events.helm_release.this",
            "module.eks_blueprints_addons.module.argo_rollouts.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.argo_rollouts.aws_iam_role.this",
            "module.eks_blueprints_addons.module.argo_rollouts.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.argo_rollouts.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.argo_rollouts.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.argo_rollouts.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.argo_rollouts.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.argo_rollouts.data.aws_partition.current",
            "module.eks_blueprints_addons.module.argo_rollouts.helm_release.this",
            "module.eks_blueprints_addons.module.argo_workflows.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.argo_workflows.aws_iam_role.this",
            "module.eks_blueprints_addons.module.argo_workflows.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.argo_workflows.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.argo_workflows.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.argo_workflows.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.argo_workflows.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.argo_workflows.data.aws_partition.current",
            "module.eks_blueprints_addons.module.argo_workflows.helm_release.this",
            "module.eks_blueprints_addons.module.argocd.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.argocd.aws_iam_role.this",
            "module.eks_blueprints_addons.module.argocd.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.argocd.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.argocd.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.argocd.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.argocd.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.argocd.data.aws_partition.current",
            "module.eks_blueprints_addons.module.argocd.helm_release.this",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.aws_iam_role.this",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.data.aws_partition.current",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.helm_release.this",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.aws_iam_role.this",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.data.aws_partition.current",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.helm_release.this",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.aws_iam_role.this",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.data.aws_partition.current",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.helm_release.this",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.aws_iam_role.this",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.data.aws_partition.current",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.helm_release.this",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.aws_iam_role.this",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.data.aws_partition.current",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.helm_release.this",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.aws_iam_role.this",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.data.aws_partition.current",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.helm_release.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.aws_iam_role.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.data.aws_partition.current",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.helm_release.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.aws_sqs_queue.dlq",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.aws_sqs_queue.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.aws_sqs_queue_policy.dlq",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.aws_sqs_queue_policy.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.aws_sqs_queue_redrive_allow_policy.dlq",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.aws_sqs_queue_redrive_allow_policy.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.aws_sqs_queue_redrive_policy.dlq",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.aws_sqs_queue_redrive_policy.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.data.aws_iam_policy_document.dlq",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.aws_iam_role.this",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.data.aws_partition.current",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.helm_release.this",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.aws_iam_role.this",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.data.aws_partition.current",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.helm_release.this",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.aws_iam_role.this",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.data.aws_partition.current",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.helm_release.this",
            "module.eks_blueprints_addons.module.cert_manager.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.cert_manager.aws_iam_role.this",
            "module.eks_blueprints_addons.module.cert_manager.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.cert_manager.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.cert_manager.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.cert_manager.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.cert_manager.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.cert_manager.data.aws_partition.current",
            "module.eks_blueprints_addons.module.cert_manager.helm_release.this",
            "module.eks_blueprints_addons.module.cluster_autoscaler.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.cluster_autoscaler.aws_iam_role.this",
            "module.eks_blueprints_addons.module.cluster_autoscaler.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.cluster_autoscaler.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.cluster_autoscaler.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.cluster_autoscaler.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.cluster_autoscaler.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.cluster_autoscaler.data.aws_partition.current",
            "module.eks_blueprints_addons.module.cluster_autoscaler.helm_release.this",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.aws_iam_role.this",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.data.aws_partition.current",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.helm_release.this",
            "module.eks_blueprints_addons.module.external_dns.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.external_dns.aws_iam_role.this",
            "module.eks_blueprints_addons.module.external_dns.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.external_dns.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.external_dns.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.external_dns.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.external_dns.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.external_dns.data.aws_partition.current",
            "module.eks_blueprints_addons.module.external_dns.helm_release.this",
            "module.eks_blueprints_addons.module.external_secrets.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.external_secrets.aws_iam_role.this",
            "module.eks_blueprints_addons.module.external_secrets.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.external_secrets.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.external_secrets.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.external_secrets.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.external_secrets.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.external_secrets.data.aws_partition.current",
            "module.eks_blueprints_addons.module.external_secrets.helm_release.this",
            "module.eks_blueprints_addons.module.gatekeeper.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.gatekeeper.aws_iam_role.this",
            "module.eks_blueprints_addons.module.gatekeeper.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.gatekeeper.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.gatekeeper.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.gatekeeper.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.gatekeeper.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.gatekeeper.data.aws_partition.current",
            "module.eks_blueprints_addons.module.gatekeeper.helm_release.this",
            "module.eks_blueprints_addons.module.ingress_nginx.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.ingress_nginx.aws_iam_role.this",
            "module.eks_blueprints_addons.module.ingress_nginx.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.ingress_nginx.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.ingress_nginx.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.ingress_nginx.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.ingress_nginx.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.ingress_nginx.data.aws_partition.current",
            "module.eks_blueprints_addons.module.ingress_nginx.helm_release.this",
            "module.eks_blueprints_addons.module.karpenter.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.karpenter.aws_iam_role.this",
            "module.eks_blueprints_addons.module.karpenter.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.karpenter.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.karpenter.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.karpenter.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.karpenter.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.karpenter.data.aws_partition.current",
            "module.eks_blueprints_addons.module.karpenter.helm_release.this",
            "module.eks_blueprints_addons.module.karpenter_sqs.aws_sqs_queue.dlq",
            "module.eks_blueprints_addons.module.karpenter_sqs.aws_sqs_queue.this",
            "module.eks_blueprints_addons.module.karpenter_sqs.aws_sqs_queue_policy.dlq",
            "module.eks_blueprints_addons.module.karpenter_sqs.aws_sqs_queue_policy.this",
            "module.eks_blueprints_addons.module.karpenter_sqs.aws_sqs_queue_redrive_allow_policy.dlq",
            "module.eks_blueprints_addons.module.karpenter_sqs.aws_sqs_queue_redrive_allow_policy.this",
            "module.eks_blueprints_addons.module.karpenter_sqs.aws_sqs_queue_redrive_policy.dlq",
            "module.eks_blueprints_addons.module.karpenter_sqs.aws_sqs_queue_redrive_policy.this",
            "module.eks_blueprints_addons.module.karpenter_sqs.data.aws_iam_policy_document.dlq",
            "module.eks_blueprints_addons.module.karpenter_sqs.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.aws_iam_role.this",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.data.aws_partition.current",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.helm_release.this",
            "module.eks_blueprints_addons.module.metrics_server.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.metrics_server.aws_iam_role.this",
            "module.eks_blueprints_addons.module.metrics_server.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.metrics_server.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.metrics_server.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.metrics_server.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.metrics_server.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.metrics_server.data.aws_partition.current",
            "module.eks_blueprints_addons.module.metrics_server.helm_release.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.aws_iam_role.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.data.aws_partition.current",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.helm_release.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.aws_iam_role.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.data.aws_partition.current",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.helm_release.this",
            "module.eks_blueprints_addons.module.velero.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.velero.aws_iam_role.this",
            "module.eks_blueprints_addons.module.velero.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.velero.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.velero.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.velero.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.velero.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.velero.data.aws_partition.current",
            "module.eks_blueprints_addons.module.velero.helm_release.this",
            "module.eks_blueprints_addons.module.vpa.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.vpa.aws_iam_role.this",
            "module.eks_blueprints_addons.module.vpa.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.vpa.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.vpa.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.vpa.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.vpa.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.vpa.data.aws_partition.current",
            "module.eks_blueprints_addons.module.vpa.helm_release.this",
            "module.eks_blueprints_addons.random_bytes.this",
            "module.eks_blueprints_addons.time_sleep.this",
            "module.eks_blueprints_addons_lbc.aws_autoscaling_group_tag.aws_node_termination_handler",
            "module.eks_blueprints_addons_lbc.aws_autoscaling_lifecycle_hook.aws_node_termination_handler",
            "module.eks_blueprints_addons_lbc.aws_cloudformation_stack.usage_telemetry",
            "module.eks_blueprints_addons_lbc.aws_cloudwatch_event_rule.aws_node_termination_handler",
            "module.eks_blueprints_addons_lbc.aws_cloudwatch_event_rule.karpenter",
            "module.eks_blueprints_addons_lbc.aws_cloudwatch_event_target.aws_node_termination_handler",
            "module.eks_blueprints_addons_lbc.aws_cloudwatch_event_target.karpenter",
            "module.eks_blueprints_addons_lbc.aws_cloudwatch_log_group.aws_for_fluentbit",
            "module.eks_blueprints_addons_lbc.aws_cloudwatch_log_group.fargate_fluentbit",
            "module.eks_blueprints_addons_lbc.aws_eks_addon.this",
            "module.eks_blueprints_addons_lbc.aws_iam_instance_profile.karpenter",
            "module.eks_blueprints_addons_lbc.aws_iam_policy.fargate_fluentbit",
            "module.eks_blueprints_addons_lbc.aws_iam_role.karpenter",
            "module.eks_blueprints_addons_lbc.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.aws_iam_role_policy_attachment.karpenter",
            "module.eks_blueprints_addons_lbc.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.data.aws_eks_addon_version.this",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.aws_efs_csi_driver",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.aws_for_fluentbit",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.aws_fsx_csi_driver",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.aws_gateway_api_controller",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.aws_load_balancer_controller",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.aws_node_termination_handler",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.aws_privateca_issuer",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.cert_manager",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.cluster_autoscaler",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.external_dns",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.external_secrets",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.fargate_fluentbit",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.karpenter",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.karpenter_assume_role",
            "module.eks_blueprints_addons_lbc.data.aws_iam_policy_document.velero",
            "module.eks_blueprints_addons_lbc.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.data.aws_region.current",
            "module.eks_blueprints_addons_lbc.helm_release.this",
            "module.eks_blueprints_addons_lbc.kubernetes_config_map_v1.aws_logging",
            "module.eks_blueprints_addons_lbc.kubernetes_config_map_v1_data.aws_for_fluentbit_containerinsights",
            "module.eks_blueprints_addons_lbc.kubernetes_namespace_v1.aws_observability",
            "module.eks_blueprints_addons_lbc.module.argo_events.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.argo_events.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.argo_events.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.argo_events.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.argo_events.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.argo_events.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.argo_events.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.argo_events.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.argo_events.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.argo_rollouts.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.argo_rollouts.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.argo_rollouts.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.argo_rollouts.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.argo_rollouts.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.argo_rollouts.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.argo_rollouts.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.argo_rollouts.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.argo_rollouts.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.argo_workflows.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.argo_workflows.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.argo_workflows.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.argo_workflows.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.argo_workflows.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.argo_workflows.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.argo_workflows.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.argo_workflows.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.argo_workflows.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.argocd.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.argocd.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.argocd.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.argocd.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.argocd.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.argocd.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.argocd.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.argocd.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.argocd.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.aws_cloudwatch_metrics.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_cloudwatch_metrics.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.aws_cloudwatch_metrics.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.aws_cloudwatch_metrics.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.aws_cloudwatch_metrics.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.aws_cloudwatch_metrics.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.aws_cloudwatch_metrics.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.aws_cloudwatch_metrics.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.aws_cloudwatch_metrics.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.aws_efs_csi_driver.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_efs_csi_driver.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.aws_efs_csi_driver.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.aws_efs_csi_driver.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.aws_efs_csi_driver.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.aws_efs_csi_driver.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.aws_efs_csi_driver.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.aws_efs_csi_driver.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.aws_efs_csi_driver.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.aws_for_fluentbit.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_for_fluentbit.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.aws_for_fluentbit.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.aws_for_fluentbit.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.aws_for_fluentbit.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.aws_for_fluentbit.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.aws_for_fluentbit.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.aws_for_fluentbit.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.aws_for_fluentbit.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.aws_fsx_csi_driver.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_fsx_csi_driver.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.aws_fsx_csi_driver.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.aws_fsx_csi_driver.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.aws_fsx_csi_driver.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.aws_fsx_csi_driver.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.aws_fsx_csi_driver.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.aws_fsx_csi_driver.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.aws_fsx_csi_driver.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.aws_gateway_api_controller.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_gateway_api_controller.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.aws_gateway_api_controller.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.aws_gateway_api_controller.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.aws_gateway_api_controller.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.aws_gateway_api_controller.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.aws_gateway_api_controller.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.aws_gateway_api_controller.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.aws_gateway_api_controller.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.aws_load_balancer_controller.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_load_balancer_controller.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.aws_load_balancer_controller.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.aws_load_balancer_controller.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.aws_load_balancer_controller.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.aws_load_balancer_controller.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.aws_load_balancer_controller.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.aws_load_balancer_controller.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.aws_load_balancer_controller.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler_sqs.aws_sqs_queue.dlq",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler_sqs.aws_sqs_queue.this",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler_sqs.aws_sqs_queue_policy.dlq",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler_sqs.aws_sqs_queue_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler_sqs.aws_sqs_queue_redrive_allow_policy.dlq",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler_sqs.aws_sqs_queue_redrive_allow_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler_sqs.aws_sqs_queue_redrive_policy.dlq",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler_sqs.aws_sqs_queue_redrive_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler_sqs.data.aws_iam_policy_document.dlq",
            "module.eks_blueprints_addons_lbc.module.aws_node_termination_handler_sqs.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.aws_privateca_issuer.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.aws_privateca_issuer.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.aws_privateca_issuer.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.aws_privateca_issuer.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.aws_privateca_issuer.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.aws_privateca_issuer.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.aws_privateca_issuer.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.aws_privateca_issuer.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.aws_privateca_issuer.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_shadow.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_shadow.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_shadow.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_shadow.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_shadow.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_shadow.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_shadow.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_shadow.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_shadow.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_update_operator.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_update_operator.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_update_operator.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_update_operator.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_update_operator.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_update_operator.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_update_operator.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_update_operator.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.bottlerocket_update_operator.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.cert_manager.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.cert_manager.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.cert_manager.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.cert_manager.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.cert_manager.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.cert_manager.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.cert_manager.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.cert_manager.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.cert_manager.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.cluster_autoscaler.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.cluster_autoscaler.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.cluster_autoscaler.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.cluster_autoscaler.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.cluster_autoscaler.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.cluster_autoscaler.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.cluster_autoscaler.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.cluster_autoscaler.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.cluster_autoscaler.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.cluster_proportional_autoscaler.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.cluster_proportional_autoscaler.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.cluster_proportional_autoscaler.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.cluster_proportional_autoscaler.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.cluster_proportional_autoscaler.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.cluster_proportional_autoscaler.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.cluster_proportional_autoscaler.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.cluster_proportional_autoscaler.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.cluster_proportional_autoscaler.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.external_dns.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.external_dns.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.external_dns.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.external_dns.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.external_dns.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.external_dns.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.external_dns.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.external_dns.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.external_dns.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.external_secrets.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.external_secrets.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.external_secrets.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.external_secrets.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.external_secrets.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.external_secrets.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.external_secrets.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.external_secrets.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.external_secrets.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.gatekeeper.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.gatekeeper.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.gatekeeper.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.gatekeeper.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.gatekeeper.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.gatekeeper.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.gatekeeper.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.gatekeeper.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.gatekeeper.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.ingress_nginx.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.ingress_nginx.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.ingress_nginx.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.ingress_nginx.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.ingress_nginx.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.ingress_nginx.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.ingress_nginx.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.ingress_nginx.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.ingress_nginx.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.karpenter.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.karpenter.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.karpenter.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.karpenter.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.karpenter.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.karpenter.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.karpenter.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.karpenter.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.karpenter.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.karpenter_sqs.aws_sqs_queue.dlq",
            "module.eks_blueprints_addons_lbc.module.karpenter_sqs.aws_sqs_queue.this",
            "module.eks_blueprints_addons_lbc.module.karpenter_sqs.aws_sqs_queue_policy.dlq",
            "module.eks_blueprints_addons_lbc.module.karpenter_sqs.aws_sqs_queue_policy.this",
            "module.eks_blueprints_addons_lbc.module.karpenter_sqs.aws_sqs_queue_redrive_allow_policy.dlq",
            "module.eks_blueprints_addons_lbc.module.karpenter_sqs.aws_sqs_queue_redrive_allow_policy.this",
            "module.eks_blueprints_addons_lbc.module.karpenter_sqs.aws_sqs_queue_redrive_policy.dlq",
            "module.eks_blueprints_addons_lbc.module.karpenter_sqs.aws_sqs_queue_redrive_policy.this",
            "module.eks_blueprints_addons_lbc.module.karpenter_sqs.data.aws_iam_policy_document.dlq",
            "module.eks_blueprints_addons_lbc.module.karpenter_sqs.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.kube_prometheus_stack.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.kube_prometheus_stack.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.kube_prometheus_stack.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.kube_prometheus_stack.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.kube_prometheus_stack.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.kube_prometheus_stack.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.kube_prometheus_stack.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.kube_prometheus_stack.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.kube_prometheus_stack.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.metrics_server.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.metrics_server.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.metrics_server.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.metrics_server.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.metrics_server.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.metrics_server.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.metrics_server.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.metrics_server.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.metrics_server.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver_provider_aws.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver_provider_aws.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver_provider_aws.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver_provider_aws.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver_provider_aws.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver_provider_aws.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver_provider_aws.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver_provider_aws.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.secrets_store_csi_driver_provider_aws.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.velero.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.velero.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.velero.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.velero.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.velero.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.velero.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.velero.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.velero.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.velero.helm_release.this",
            "module.eks_blueprints_addons_lbc.module.vpa.aws_iam_policy.this",
            "module.eks_blueprints_addons_lbc.module.vpa.aws_iam_role.this",
            "module.eks_blueprints_addons_lbc.module.vpa.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons_lbc.module.vpa.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons_lbc.module.vpa.data.aws_caller_identity.current",
            "module.eks_blueprints_addons_lbc.module.vpa.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons_lbc.module.vpa.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons_lbc.module.vpa.data.aws_partition.current",
            "module.eks_blueprints_addons_lbc.module.vpa.helm_release.this",
            "module.eks_blueprints_addons_lbc.random_bytes.this",
            "module.eks_blueprints_addons_lbc.time_sleep.this",
            "null_resource.ingress_cleanup",
            "null_resource.wait_for_aws_lb_controller"
          ]
        }
      ]
    }
  ]
}